--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@swc/core": "^1.7.24",
     "firebase": "^10.13.1",
     "flowbite-react": "^0.10.1",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
